--- a/.github/workflows/ssa1.yml
+++ b/.github/workflows/ssa1.yml
@@ -20,8 +20,8 @@ jobs:
         with:
           clientId: ${{ secrets.PORT_CLIENT_ID }}
           clientSecret: ${{ secrets.PORT_CLIENT_SECRET }}
-          blueprint: service
-          identifier: ${{ fromJson(inputs.port_payload).context.entity }}
+          baseUrl: https://api.getport.io
+          operation: PATCH_RUN
           runId: ${{ fromJson(inputs.port_payload).context.runId }}
           logMessage: "Step 1 completed successfully."
 
@@ -30,8 +30,8 @@ jobs:
         with:
           clientId: ${{ secrets.PORT_CLIENT_ID }}
           clientSecret: ${{ secrets.PORT_CLIENT_SECRET }}
-          blueprint: service
-          identifier: ${{ fromJson(inputs.port_payload).context.entity }}
+          baseUrl: https://api.getport.io
+          operation: PATCH_RUN
           runId: ${{ fromJson(inputs.port_payload).context.runId }}
           logMessage: "Step 2 completed successfully."
 
@@ -40,8 +40,8 @@ jobs:
         with:
           clientId: ${{ secrets.PORT_CLIENT_ID }}
           clientSecret: ${{ secrets.PORT_CLIENT_SECRET }}
-          blueprint: service
-          identifier: ${{ fromJson(inputs.port_payload).context.entity }}
+          baseUrl: https://api.getport.io
+          operation: PATCH_RUN
           runId: ${{ fromJson(inputs.port_payload).context.runId }}
           logMessage: "Step 3 completed successfully."
 
@@ -55,8 +55,8 @@ jobs:
         with:
           clientId: ${{ secrets.PORT_CLIENT_ID }}
           clientSecret: ${{ secrets.PORT_CLIENT_SECRET }}
-          blueprint: service
-          identifier: ${{ fromJson(inputs.port_payload).context.entity }}
+          baseUrl: https://api.getport.io
+          operation: PATCH_RUN
           runId: ${{ fromJson(inputs.port_payload).context.runId }}
           logMessage: "Error in Step 4: Pipeline halted due to an issue."
 
@@ -65,7 +65,7 @@ jobs:
         with:
           clientId: ${{ secrets.PORT_CLIENT_ID }}
           clientSecret: ${{ secrets.PORT_CLIENT_SECRET }}
-          blueprint: service
-          identifier: ${{ fromJson(inputs.port_payload).context.entity }}
+          baseUrl: https://api.getport.io
+          operation: PATCH_RUN
           runId: ${{ fromJson(inputs.port_payload).context.runId }}
           logMessage: "Pipeline completed with errors."
