--- a/.github/workflows/ssa1.yml
+++ b/.github/workflows/ssa1.yml
@@ -15,44 +15,52 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v3
 
-      - name: Log Step 1 Progress and Update Label
-        uses: port-labs/port-github-action@v1
-        with:
-          clientId: ${{ secrets.PORT_CLIENT_ID }}
-          clientSecret: ${{ secrets.PORT_CLIENT_SECRET }}
-          baseUrl: https://api.getport.io
-          operation: PATCH_RUN
-          runId: ${{ fromJson(inputs.port_payload).runId }}
-          logMessage: "Step 1 completed successfully."
-          statusLabel: "Step 1 Completed"
+      - name: Generate Access Token
+        id: generate-token
+        run: |
+          access_token=$(curl --location --request POST 'https://api.getport.io/v1/auth/access_token' \
+          --header 'Content-Type: application/json' \
+          --data-raw '{
+              "clientId": "'${{ secrets.PORT_CLIENT_ID }}'",
+              "clientSecret": "'${{ secrets.PORT_CLIENT_SECRET }}'"
+          }' | jq '.accessToken' | sed 's/"//g')
+          echo "ACCESS_TOKEN=$access_token" >> $GITHUB_ENV
+
+      - name: Log Step 1 Progress
+        run: |
+          curl -L -X PATCH "https://api.getport.io/v1/actions/runs/${{ fromJson(inputs.port_payload).runId }}" \
+          -H "Authorization: Bearer ${{ env.ACCESS_TOKEN }}" \
+          -H "Content-Type: application/json" \
+          -d '{
+            "statusLabel": "Step 1 Completed",
+            "summary": "Step 1 completed successfully."
+          }'
 
       - name: Wait 5 Seconds
         run: sleep 5
 
-      - name: Log Step 2 Progress and Update Label
-        uses: port-labs/port-github-action@v1
-        with:
-          clientId: ${{ secrets.PORT_CLIENT_ID }}
-          clientSecret: ${{ secrets.PORT_CLIENT_SECRET }}
-          baseUrl: https://api.getport.io
-          operation: PATCH_RUN
-          runId: ${{ fromJson(inputs.port_payload).runId }}
-          logMessage: "Step 2 completed successfully."
-          statusLabel: "Step 2 Completed"
+      - name: Log Step 2 Progress
+        run: |
+          curl -L -X PATCH "https://api.getport.io/v1/actions/runs/${{ fromJson(inputs.port_payload).runId }}" \
+          -H "Authorization: Bearer ${{ env.ACCESS_TOKEN }}" \
+          -H "Content-Type: application/json" \
+          -d '{
+            "statusLabel": "Step 2 Completed",
+            "summary": "Step 2 completed successfully."
+          }'
 
       - name: Wait 5 Seconds
         run: sleep 5
 
-      - name: Log Step 3 Progress and Update Label
-        uses: port-labs/port-github-action@v1
-        with:
-          clientId: ${{ secrets.PORT_CLIENT_ID }}
-          clientSecret: ${{ secrets.PORT_CLIENT_SECRET }}
-          baseUrl: https://api.getport.io
-          operation: PATCH_RUN
-          runId: ${{ fromJson(inputs.port_payload).runId }}
-          logMessage: "Step 3 completed successfully."
-          statusLabel: "Step 3 Completed"
+      - name: Log Step 3 Progress
+        run: |
+          curl -L -X PATCH "https://api.getport.io/v1/actions/runs/${{ fromJson(inputs.port_payload).runId }}" \
+          -H "Authorization: Bearer ${{ env.ACCESS_TOKEN }}" \
+          -H "Content-Type: application/json" \
+          -d '{
+            "statusLabel": "Step 3 Completed",
+            "summary": "Step 3 completed successfully."
+          }'
 
       - name: Wait 5 Seconds
         run: sleep 5
@@ -64,40 +72,28 @@ jobs:
           exit 1
         continue-on-error: true
 
-      - name: Extract Error Details
+      - name: Log Step 4 Error
         if: failure()
         run: |
-          echo "Error Log: Simulated failure in Step 4." >> $GITHUB_ENV
-          echo "Error Details: This is an example error log for debugging purposes." >> $GITHUB_ENV
-
-      - name: Log Step 4 Error and Update Label
-        if: failure()
-        uses: port-labs/port-github-action@v1
-        with:
-          clientId: ${{ secrets.PORT_CLIENT_ID }}
-          clientSecret: ${{ secrets.PORT_CLIENT_SECRET }}
-          baseUrl: https://api.getport.io
-          operation: PATCH_RUN
-          runId: ${{ fromJson(inputs.port_payload).runId }}
-          logMessage: |
-            Error in Step 4: Pipeline halted due to an issue.
-            Error Log: ${{ env.Error_Log }}
-            Error Details: ${{ env.Error_Details }}
-          statusLabel: "Error in Step 4"
+          curl -L -X PATCH "https://api.getport.io/v1/actions/runs/${{ fromJson(inputs.port_payload).runId }}" \
+          -H "Authorization: Bearer ${{ env.ACCESS_TOKEN }}" \
+          -H "Content-Type: application/json" \
+          -d '{
+            "status": "IN_PROGRESS",
+            "statusLabel": "Error in Step 4",
+            "summary": "Error in Step 4: Pipeline halted due to an issue."
+          }'
 
       - name: Wait 5 Seconds
         run: sleep 5
 
-      - name: Set Final Status and Log
-        if: always()
-        uses: port-labs/port-github-action@v1
-        with:
-          clientId: ${{ secrets.PORT_CLIENT_ID }}
-          clientSecret: ${{ secrets.PORT_CLIENT_SECRET }}
-          baseUrl: https://api.getport.io
-          operation: PATCH_RUN
-          runId: ${{ fromJson(inputs.port_payload).runId }}
-          logMessage: |
-            Pipeline completed with errors - error: "${{ env.Error_Details }}"
-          terminationStatus: FAILURE
-          statusLabel: "Pipeline Failed"
+      - name: Set Final Status as Failure
+        run: |
+          curl -L -X PATCH "https://api.getport.io/v1/actions/runs/${{ fromJson(inputs.port_payload).runId }}" \
+          -H "Authorization: Bearer ${{ env.ACCESS_TOKEN }}" \
+          -H "Content-Type: application/json" \
+          -d '{
+            "status": "FAILURE",
+            "statusLabel": "Pipeline Failed",
+            "summary": "Pipeline completed with errors."
+          }'
