--- a/.github/workflows/ssa2.yml
+++ b/.github/workflows/ssa2.yml
@@ -26,6 +26,12 @@ jobs:
           }' | jq '.accessToken' | sed 's/"//g')
           echo "ACCESS_TOKEN=$access_token" >> $GITHUB_ENV
 
+      - name: Sanitize Workflow Identifier
+        id: sanitize-workflow-id
+        run: |
+          sanitized_workflow_id=$(echo "${{ github.event.inputs.port_payload.workflow_id }}" | sed 's/[^A-Za-z0-9@_.+:\/=-]//g')
+          echo "SANITIZED_WORKFLOW_ID=$sanitized_workflow_id" >> $GITHUB_ENV
+
       - name: Trigger Deployment Pipeline
         run: |
           curl -L -X POST "https://api.getport.io/v1/blueprints/deployment/entities" \
@@ -33,13 +39,13 @@ jobs:
           -H "Content-Type: application/json" \
           -d '{
             "identifier": "deployment-${{ github.run_id }}",
-            "title": "Deployment for Workflow - ${{ github.event.inputs.port_payload.workflow_id }}",
+            "title": "Deployment for Workflow - ${{ env.SANITIZED_WORKFLOW_ID }}",
             "blueprint": "deployment",
             "properties": {
               "status": "IN_PROGRESS"
             },
             "relations": {
-              "workflow": "${{ github.event.inputs.port_payload.workflow_id }}"
+              "workflow": "${{ env.SANITIZED_WORKFLOW_ID }}"
             }
           }'
 
@@ -112,7 +118,7 @@ jobs:
       - name: Update Workflow as Failed
         if: always()
         run: |
-          curl -L -X PATCH "https://api.getport.io/v1/blueprints/workflow/entities/${{ github.event.inputs.port_payload.workflow_id }}" \
+          curl -L -X PATCH "https://api.getport.io/v1/blueprints/workflow/entities/${{ env.SANITIZED_WORKFLOW_ID }}" \
           -H "Authorization: Bearer ${{ env.ACCESS_TOKEN }}" \
           -H "Content-Type: application/json" \
           -d '{
