--- a/.github/workflows/ssa2.yml
+++ b/.github/workflows/ssa2.yml
@@ -26,6 +26,9 @@ jobs:
           }' | jq '.accessToken' | sed 's/"//g')
           echo "ACCESS_TOKEN=$access_token" >> $GITHUB_ENV
 
+      - name: Sleep for 5 Seconds
+        run: sleep 5
+
       - name: Trigger Deployment Pipeline
         run: |
           curl -L -X POST "https://api.getport.io/v1/blueprints/deployment/entities" \
@@ -61,6 +64,9 @@ jobs:
           }' | jq '.accessToken' | sed 's/"//g')
           echo "ACCESS_TOKEN=$access_token" >> $GITHUB_ENV
 
+      - name: Sleep for 5 Seconds
+        run: sleep 5
+
       - name: Create First Step
         id: create-step1
         run: |
@@ -78,6 +84,9 @@ jobs:
               "deployment": "deployment-${{ github.run_id }}"
             }
           }'
+
+      - name: Sleep for 5 Seconds
+        run: sleep 5
 
       - name: Simulate Step 2 Failure
         id: create-step2
@@ -97,6 +106,9 @@ jobs:
             }
           }'
 
+      - name: Sleep for 5 Seconds
+        run: sleep 5
+
       - name: Update Deployment as Failed
         if: always()
         run: |
@@ -108,6 +120,9 @@ jobs:
               "status": "FAILED"
             }
           }'
+
+      - name: Sleep for 5 Seconds
+        run: sleep 5
 
       - name: Update Workflow as Failed
         if: always()
